--- a/templates/jackson-heights.html
+++ b/templates/jackson-heights.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    
+
     <title>Optimal Strategies for NYC Taxi Drivers</title>
 
     <!-- Bootstrap Core CSS -->
@@ -118,10 +118,10 @@
             <div class="row">
                 <div class="col-lg-12">
                     <h2>Our Predictive Engine Works</h2>
-                    <ol> <li><strong>Naive Strategy:</strong> Make pickups in the same general region where you drop off your last customer. Drivers following this strategy would make about $45 from 9am-10am on a weekday at Times Square, which is about average.</li>
-                    <li> <strong>Informed Strategy:</strong> Look at positions that good drivers frequent and instead drive to the most profitable location to find customers. You can see the difference below. Drivers following this stragegy make about $70 from 9am-10am on a weekday at Times Square, which is about as good as drivers that are idle less than 15% of the time.</li>
+                    <ol> <li><strong>Naive Strategy:</strong> Make pickups in the same general region where you drop off your last customer. Drivers following this strategy would make about $47 from 9am-10am on a weekday at Times Square, which is about average.</li>
+                    <li> <strong>Informed Strategy:</strong> Look at positions that good drivers frequent and instead drive to the most profitable location to find customers. You can see the difference below. Drivers following this stragegy make $56.4 from 9am-10am on a weekday starting at Jackson Heights, which is about as good as drivers that are idle less than 15% of the time.</li>
                     </ol>
-                    <img src="static/img/good-and-naive-strategy.png" height="500">
+                    <img src="static/img/jackson-heights/good-naive-strategy-comparison.png" height="500">
                 </div>
             </div>
         </div>
