left justified text

--- a/templates/jackson-heights.html
+++ b/templates/jackson-heights.html
@@ -76,7 +76,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <h1>Learn strategies from the best</h1>
-                    <p>Do you have a fleet of taxis? We've mined for the best strategies so your drivers can make more money.</p>
+                    <p align="left">Do you have a fleet of taxis? We've mined for the best strategies so your drivers can make more money.</p>
                     <a class="btn btn-default page-scroll" href="#about">Learn more!</a>
                 </div>
             </div>
@@ -138,7 +138,20 @@
                 </div>
             </div>
         </div>
+
     </section>
+
+<h2>Algorithm </h2>
+<pre>
+STARTING AT: (-73.88, 40.75)
+STEP
+STEP: Better Position 
+        35-41 76th St, Flushing, NY 11372, USA
+        21-26-21-28 80th St, East Elmhurst, NY 11370, USA
+STEP
+STEP
+</pre>
+
 
     <!-- jQuery -->
     <script src="static/js/jquery.js"></script>
