--- a/templates/jackson-heights.html
+++ b/templates/jackson-heights.html
@@ -76,7 +76,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <h1>Learn strategies from the best</h1>
-                    <p align="left">Do you have a fleet of taxis? We've mined for the best strategies so your drivers can make more money.</p>
+                    <p>Do you have a fleet of taxis? We've mined for the best strategies so your drivers can make more money.</p>
                     <a class="btn btn-default page-scroll" href="#about">Learn more!</a>
                 </div>
             </div>
@@ -101,10 +101,10 @@
             <div class="row">
                 <div class="col-lg-12">
                     <h3>Better Drivers have Better Strategies</h3>
-                    <p>Better drivers frequent different locations. For example, roughly the same number of good and bad drivers go to La'Guardia on weekday mornings, and they make the same amount of money from their fares there on average. The difference however is waiting time before they find a customer. </p>
+                    <p align="left">Better drivers frequent different locations. For example, roughly the same number of good and bad drivers go to La'Guardia on weekday mornings, and they make the same amount of money from their fares there on average. The difference however is waiting time before they find a customer. </p>
 <img src="static/img/laguardia-good-drivers.png" style="float: left; width: 40%; margin-right: 1%; margin-bottom: 0.5em;">
 <img src="static/img/laguardia-bad-drivers.png" style="float: left; width: 38%; margin-right: 1%; margin-bottom: 0.5em;">
-                    <p>Better drivers don't go frequent this parking structure near LGA on weekday mornings. They do however frequent the nearby coffee shop.</p>
+                    <p align="left">Better drivers don't go frequent this parking structure near LGA on weekday mornings. They do however frequent the nearby coffee shop.</p>
 <p style="clear: both;">
                 </div>
             </div>
@@ -118,7 +118,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <h2>Our Predictive Engine Works</h2>
-                    <ol> <li><strong>Naive Strategy:</strong> Make pickups in the same general region where you drop off your last customer. Drivers following this strategy would make about $47 from 9am-10am on a weekday at Jackson Heights, which is about average.</li>
+                    <ol> <p align="left"><li><strong>Naive Strategy:</strong> Make pickups in the same general region where you drop off your last customer. Drivers following this strategy would make about $47 from 9am-10am on a weekday at Jackson Heights, which is about average.</li> </p>
                     <li> <strong>Informed Strategy:</strong> Look at positions that good drivers frequent and instead drive to the most profitable location to find customers. You can see the difference below. Drivers following this stragegy make $56.4 from 9am-10am on a weekday starting at Jackson Heights, which is about as good as drivers that are idle less than 15% of the time.</li>
                     </ol>
                     <img src="static/img/jackson-heights/good-naive-strategy-comparison.png" height="500">
