left justified text

--- a/templates/jackson-heights.html
+++ b/templates/jackson-heights.html
@@ -118,8 +118,8 @@
             <div class="row">
                 <div class="col-lg-12">
                     <h2>Our Predictive Engine Works</h2>
-                    <ol> <li><strong>Naive Strategy:</strong>  <p align="left">  Make pickups in the same general region where you drop off your last customer. Drivers following this strategy would make about $47 from 9am-10am on a weekday at Jackson Heights, which is about average.</li> </p>
-                    <li> <strong>Informed Strategy:</strong> Look at positions that good drivers frequent and instead drive to the most profitable location to find customers. You can see the difference below. Drivers following this stragegy make $56.4 from 9am-10am on a weekday starting at Jackson Heights, which is about as good as drivers that are idle less than 15% of the time.</li>
+                    <ol> <li>  <p align="left"> <strong>Naive Strategy:</strong>  Make pickups in the same general region where you drop off your last customer. Drivers following this strategy would make about $47 from 9am-10am on a weekday at Jackson Heights, which is about average. </p> </li>
+                    <li>  <p align="left"> <strong>Informed Strategy:</strong>  <p align="left"> Look at positions that good drivers frequent and instead drive to the most profitable location to find customers. You can see the difference below. Drivers following this stragegy make $56.4 from 9am-10am on a weekday starting at Jackson Heights, which is about as good as drivers that are idle less than 15% of the time.</p> </li>
                     </ol>
                     <img src="static/img/jackson-heights/good-naive-strategy-comparison.png" height="500">
                 </div>
